# agentic-deepdives

./: .gitignore  README.md  resources.md  skills-checklist.md
agentic-ai/: README.md  pyproject.toml  setup.md
agentic-ai/ai_agents_from0/: AI-Agents-From-Scratch-Guide.md  risk.ipynb  week1_python_apis.ipynb  week2_llm_apis.ipynb  week3_agent_foundations.ipynb  week4_tools_and_mcp.ipynb
agentic-ai/courses/: 01-prompting.md  02-agentic-workflows.md  03-building-agents.md  04-multi-agent-systems.md
agentic-ai/notebooks/: 01_prompting.ipynb  02_agentic_workflows.ipynb  03_building_agents.ipynb  04_multi_agent_systems.ipynb  README.md  _exec_check.py  build_all.py
agentic-ai/notebooks/src/: _nbtools.py  nb_01_prompting.py  nb_02_agentic_workflows.py  nb_03_building_agents.py  nb_04_multi_agent_systems.py
agentic-ai/projects/: README.md
agentic-ai/projects/01_trip_planner/: README.md  solution.py  starter.py  test_trip_planner.py
agentic-ai/projects/02_project_management_workflow/: README.md  solution.py  starter.py  test_workflow.py
agentic-ai/projects/03_research_agent/: README.md  solution.py  starter.py  test_research_agent.py
agentic-ai/projects/04_sales_team/: README.md  conftest.py  solution.py  starter.py  test_sales_team.py
agentic-ai/shared/: __init__.py  llm.py
agentic-interviewsQnA/: 01-fundamentals.md  02-reasoning-and-planning.md  03-memory-and-context.md  04-tools-and-function-calling.md  05-multi-agent-systems.md  06-frameworks-and-protocols.md  07-system-design.md  08-production-evaluation-security.md  09-interview-questions.md  09b-interview-answers-full.md  09c-followup-questions.md  10-cheatsheet.md  11-mock-interview.md  12-track-ai-engineer.md  13-track-applied-scientist.md  14-track-ml-engineer.md  15-panic-sheet.md  README.md  flashcards.csv
ai-engineer/: README.md
interview-prep/: 01-coding.md  02-ml-and-llm-depth.md  03-system-design.md  04-applied-llm.md  05-safety-alignment.md  06-behavioral-mission.md  07-rapid-fire.md  08-mock-interview.md  09-papers.md  10-numbers-and-hardware.md  11-debugging.md  12-math-stats.md  13-take-home-portfolio.md  14-cuda-and-kernels.md  15-glossary.md  16-negotiation-and-leveling.md  17-company-research.md  README.md  flashcards.csv
labs/: .gitignore  README.md  pyproject.toml
labs/.github/workflows/: ci.yml
labs/lab01_micrograd/: README.md  __init__.py  demo.py  engine.py  nn.py
labs/lab02_nanogpt/: README.md  __init__.py  config.py  data.py  model.py  sample.py  train.py
labs/lab04_inference_bench/: README.md  __init__.py  benchmark.py
labs/lab06_rag/: README.md  __init__.py  demo.py  pipeline.py  retrieval.py
labs/lab07_agent/: README.md  __init__.py  agent.py  brain.py  demo.py  tools.py
labs/tests/: test_lab01_micrograd.py  test_lab02_nanogpt.py  test_lab06_rag.py  test_lab07_agent.py  test_smoke.py
llm_mastery/: README.md  llm-in-life-sciences.md
ml_engineering/: ML-Engineering-Roadmap.md
modules/: 00-prerequisites.md  01-deep-learning-foundations.md  02-transformer-internals.md  03-llm-training-rlhf-dpo.md  04-gpu-architecture-and-inference.md  05-distributed-systems-and-inference.md  06-rag-and-vector-databases.md  (+6 more)
(+189 files in other folders)
