[project]
name = "ai-ml-bootcamp-labs"
version = "0.1.0"
description = "Build-first starter labs for the Senior AI/ML Engineer Bootcamp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Deep-learning labs (lab02 nanoGPT) need PyTorch.
nn = ["torch>=2.2"]
# Plotting (loss curves, latency histograms).
viz = ["matplotlib>=3.8"]
# Dev tooling.
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.pytest.ini_options]
# Labs are top-level packages under this directory.
pythonpath = ["."]
testpaths = ["tests"]
# Deselect the learning exercises by default so a fresh clone is green.
# Run `uv run pytest -m todo` to check your implementations.
addopts = "-m 'not todo'"
markers = [
    "todo: learning exercises that fail until you implement the TODOs",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Tests may use star-style fixtures / asserts freely.
"tests/*" = ["B011"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "lab01_micrograd",
    "lab02_nanogpt",
    "lab04_inference_bench",
    "lab06_rag",
    "lab07_agent",
]
